--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-compass": "~0.5.0",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-jasmine": "~0.5.1",
-    "grunt-contrib-watch": "~0.5.2"
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-mocha": "~0.4.1"
   }
 }
