--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-jasmine": "~0.5.1",
     "grunt-contrib-watch": "~0.5.2",
-    "grunt-mocha": "~0.4.1",
-    "grunt-mocha-phantomjs": "~0.3.0",
-    "chai": "~1.7.2",
-    "mocha": "~1.12.0",
-    "mocha-phantomjs": "~3.1.2"
+    "grunt-mocha": "~0.4.1"
   }
 }
