Add jslint to Gruntfile

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "sinon-chai": "~2.4.0",
     "chai": "~1.7.2",
     "phantom": "~1.9.1",
-    "sinon": "~1.7.3"
+    "sinon": "~1.7.3",
+    "jslint": "~2012.12.31"
   },
   "ignore": [
     "**/.*",
