--- a/bower.json
+++ b/bower.json
@@ -17,13 +17,9 @@
     "backbone.localStorage": "~1.1.6",
     "spin.js": "~1.3.2",
     "requirejs-tpl": "latest",
-    "mocha": "~1.9.0",
-    "chai-backbone": "latest",
-    "sinon-chai": "~2.4.0",
-    "chai": "~1.7.2",
     "phantom": "~1.9.1",
-    "sinon": "~1.7.3",
-    "jslint": "~2012.12.31"
+    "jslint": "~2012.12.31",
+    "jasmine": "~1.3.1"
   },
   "ignore": [
     "**/.*",
